src/main/java/jetbrick/template/parser/grammer/JetTemplateParser.java
// Generated from JetTemplateParser.g4 by ANTLR 4.1

package jetbrick.template.parser.grammer;

import java.util.List;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JetTemplateParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OP_BITWISE_AND=62, OP_RELATIONAL_GT=48, DIRECTIVE_OPEN_CONTINUE=16, OP_INSTANCEOF=67, 
		OP_BITWISE_OR=63, VALUE_ESCAPED_OPEN=8, DIRECTIVE_OPEN_PUT=11, OP_EQUALITY_EQ=46, 
		LEFT_BRACKET=39, VALUE_OPEN=7, DIRECTIVE_INCLUDE=27, OP_EQUALITY_NE=47, 
		OP_BITWISE_XOR=65, TEXT_ESCAPED_CHAR=5, DIRECTIVE_OPEN_INCLUDE=18, DIRECTIVE_SET=22, 
		DIRECTIVE_OPEN_BREAK=15, TEXT_PLAIN=3, TEXT_CDATA=4, TEXT_DIRECTIVE_LIKE=35, 
		OP_MATH_DECREMENT=61, DIRECTIVE_OPEN_STOP=17, OP_RELATIONAL_LE=51, AT=72, 
		RIGHT_PARENTHESE=38, OP_ASSIGNMENT=43, COMMA=70, IDENTIFIER=76, DIRECTIVE_MACRO=32, 
		RIGHT_BRACKET=40, OP_MATH_MULTIPLICATION=57, OP_CONDITIONAL_AND=52, DIRECTIVE_END=34, 
		DIRECTIVE_PUT=23, KEYWORD_NULL=75, DIRECTIVE_ELSEIF=25, DIRECTIVE_DEFINE=21, 
		TEXT_SINGLE_CHAR=6, DIRECTIVE_OPEN_FOR=14, OP_RELATIONAL_GE=50, INTEGER=77, 
		DIRECTIVE_STOP=30, RIGHT_BRACE=42, LEFT_PARENTHESE=37, OP_BITWISE_SHL=66, 
		DIRECTIVE_IF=24, DIRECTIVE_OPEN_TAG=19, OP_CONDITIONAL_TERNARY=69, COMMENT_BLOCK=2, 
		DIRECTIVE_ELSE=33, OP_MATH_INCREMENT=60, INTEGER_HEX=78, KEYWORD_FALSE=74, 
		DIRECTIVE_BREAK=28, OP_MATH_PLUS=55, WHITESPACE=36, OP_NEW=68, OP_MATH_REMAINDER=59, 
		OP_DOT_INVOCATION=44, DIRECTIVE_FOR=26, COMMENT_LINE=1, OP_MATH_DIVISION=58, 
		FLOATING_POINT=79, DIRECTIVE_OPEN_SET=10, OP_DOT_INVOCATION_SAFE=45, COLON=71, 
		OP_CONDITIONAL_NOT=54, KEYWORD_TRUE=73, OP_MATH_MINUS=56, OP_RELATIONAL_LT=49, 
		LEFT_BRACE=41, DIRECTIVE_OPEN_IF=12, DIRECTIVE_OPEN_ELSEIF=13, DIRECTIVE_CONTINUE=29, 
		DIRECTIVE_OPEN_MACRO=20, STRING_DOUBLE=80, STRING_SINGLE=81, DIRECTIVE_OPEN_DEFINE=9, 
		DIRECTIVE_TAG=31, OP_BITWISE_NOT=64, OP_CONDITIONAL_OR=53;
	public static final String[] tokenNames = {
		"<INVALID>", "COMMENT_LINE", "COMMENT_BLOCK", "TEXT_PLAIN", "TEXT_CDATA", 
		"TEXT_ESCAPED_CHAR", "TEXT_SINGLE_CHAR", "'${'", "'$!{'", "DIRECTIVE_OPEN_DEFINE", 
		"DIRECTIVE_OPEN_SET", "DIRECTIVE_OPEN_PUT", "DIRECTIVE_OPEN_IF", "DIRECTIVE_OPEN_ELSEIF", 
		"DIRECTIVE_OPEN_FOR", "DIRECTIVE_OPEN_BREAK", "DIRECTIVE_OPEN_CONTINUE", 
		"DIRECTIVE_OPEN_STOP", "DIRECTIVE_OPEN_INCLUDE", "DIRECTIVE_OPEN_TAG", 
		"DIRECTIVE_OPEN_MACRO", "'#define'", "'#set'", "'#put'", "'#if'", "'#elseif'", 
		"'#for'", "'#include'", "'#break'", "'#continue'", "'#stop'", "'#tag'", 
		"'#macro'", "DIRECTIVE_ELSE", "DIRECTIVE_END", "TEXT_DIRECTIVE_LIKE", 
		"WHITESPACE", "'('", "')'", "'['", "']'", "'{'", "'}'", "'='", "'.'", 
		"'?.'", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'&&'", "'||'", 
		"'!'", "'+'", "'-'", "'*'", "'/'", "'%'", "'++'", "'--'", "'&'", "'|'", 
		"'~'", "'^'", "'<<'", "OP_INSTANCEOF", "'new'", "'?'", "','", "':'", "'@'", 
		"'true'", "'false'", "'null'", "IDENTIFIER", "INTEGER", "INTEGER_HEX", 
		"FLOATING_POINT", "STRING_DOUBLE", "STRING_SINGLE"
	};
	public static final int
		RULE_template = 0, RULE_block = 1, RULE_text = 2, RULE_value = 3, RULE_directive = 4, 
		RULE_define_directive = 5, RULE_define_expression_list = 6, RULE_define_expression = 7, 
		RULE_set_directive = 8, RULE_set_expression = 9, RULE_put_directive = 10, 
		RULE_if_directive = 11, RULE_elseif_directive = 12, RULE_else_directive = 13, 
		RULE_for_directive = 14, RULE_for_expression = 15, RULE_break_directive = 16, 
		RULE_continue_directive = 17, RULE_stop_directive = 18, RULE_include_directive = 19, 
		RULE_tag_directive = 20, RULE_macro_directive = 21, RULE_invalid_directive = 22, 
		RULE_expression = 23, RULE_constant = 24, RULE_expression_list = 25, RULE_hash_map_entry_list = 26, 
		RULE_static_type_name = 27, RULE_type = 28, RULE_type_array_suffix = 29, 
		RULE_type_arguments = 30, RULE_type_list = 31, RULE_type_name = 32;
	public static final String[] ruleNames = {
		"template", "block", "text", "value", "directive", "define_directive", 
		"define_expression_list", "define_expression", "set_directive", "set_expression", 
		"put_directive", "if_directive", "elseif_directive", "else_directive", 
		"for_directive", "for_expression", "break_directive", "continue_directive", 
		"stop_directive", "include_directive", "tag_directive", "macro_directive", 
		"invalid_directive", "expression", "constant", "expression_list", "hash_map_entry_list", 
		"static_type_name", "type", "type_array_suffix", "type_arguments", "type_list", 
		"type_name"
	};

	@Override
	public String getGrammarFileName() { return "JetTemplateParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public JetTemplateParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TemplateContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TemplateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_template; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JetTemplateParserVisitor ) return ((JetTemplateParserVisitor<? extends T>)visitor).visitTemplate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TemplateContext template() throws RecognitionException {
		TemplateContext _localctx = new TemplateContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_template);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66); block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<TextContext> text() {
			return getRuleContexts(TextContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public DirectiveContext directive(int i) {
			return getRuleContext(DirectiveContext.class,i);
		}
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public TextContext text(int i) {
			return getRuleContext(TextContext.class,i);
		}
		public List<DirectiveContext> directive() {
			return getRuleContexts(DirectiveContext.class);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JetTemplateParserVisitor ) return ((JetTemplateParserVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TEXT_PLAIN) | (1L << TEXT_CDATA) | (1L << TEXT_ESCAPED_CHAR) | (1L << TEXT_SINGLE_CHAR) | (1L << VALUE_OPEN) | (1L << VALUE_ESCAPED_OPEN) | (1L << DIRECTIVE_OPEN_DEFINE) | (1L << DIRECTIVE_OPEN_SET) | (1L << DIRECTIVE_OPEN_PUT) | (1L << DIRECTIVE_OPEN_IF) | (1L << DIRECTIVE_OPEN_FOR) | (1L << DIRECTIVE_OPEN_BREAK) | (1L << DIRECTIVE_OPEN_CONTINUE) | (1L << DIRECTIVE_OPEN_STOP) | (1L << DIRECTIVE_OPEN_INCLUDE) | (1L << DIRECTIVE_OPEN_TAG) | (1L << DIRECTIVE_OPEN_MACRO) | (1L << DIRECTIVE_DEFINE) | (1L << DIRECTIVE_SET) | (1L << DIRECTIVE_PUT) | (1L << DIRECTIVE_IF) | (1L << DIRECTIVE_ELSEIF) | (1L << DIRECTIVE_FOR) | (1L << DIRECTIVE_INCLUDE) | (1L << DIRECTIVE_BREAK) | (1L << DIRECTIVE_CONTINUE) | (1L << DIRECTIVE_STOP) | (1L << DIRECTIVE_TAG) | (1L << DIRECTIVE_MACRO) | (1L << TEXT_DIRECTIVE_LIKE))) != 0)) {
				{
				setState(71);
				switch (_input.LA(1)) {
				case TEXT_PLAIN:
				case TEXT_CDATA:
				case TEXT_ESCAPED_CHAR:
				case TEXT_SINGLE_CHAR:
				case TEXT_DIRECTIVE_LIKE:
					{
					setState(68); text();
					}
					break;
				case VALUE_OPEN:
				case VALUE_ESCAPED_OPEN:
					{
					setState(69); value();
					}
					break;
				case DIRECTIVE_OPEN_DEFINE:
				case DIRECTIVE_OPEN_SET:
				case DIRECTIVE_OPEN_PUT:
				case DIRECTIVE_OPEN_IF:
				case DIRECTIVE_OPEN_FOR:
				case DIRECTIVE_OPEN_BREAK:
				case DIRECTIVE_OPEN_CONTINUE:
				case DIRECTIVE_OPEN_STOP:
				case DIRECTIVE_OPEN_INCLUDE:
				case DIRECTIVE_OPEN_TAG:
				case DIRECTIVE_OPEN_MACRO:
				case DIRECTIVE_DEFINE:
				case DIRECTIVE_SET:
				case DIRECTIVE_PUT:
				case DIRECTIVE_IF:
				case DIRECTIVE_ELSEIF:
				case DIRECTIVE_FOR:
				case DIRECTIVE_INCLUDE:
				case DIRECTIVE_BREAK:
				case DIRECTIVE_CONTINUE:
				case DIRECTIVE_STOP:
				case DIRECTIVE_TAG:
				case DIRECTIVE_MACRO:
					{
					setState(70); directive();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextContext extends ParserRuleContext {
		public TerminalNode TEXT_DIRECTIVE_LIKE() { return getToken(JetTemplateParser.TEXT_DIRECTIVE_LIKE, 0); }
		public TerminalNode TEXT_CDATA() { return getToken(JetTemplateParser.TEXT_CDATA, 0); }
		public TerminalNode TEXT_SINGLE_CHAR() { return getToken(JetTemplateParser.TEXT_SINGLE_CHAR, 0); }
		public TerminalNode TEXT_ESCAPED_CHAR() { return getToken(JetTemplateParser.TEXT_ESCAPED_CHAR, 0); }
		public TerminalNode TEXT_PLAIN() { return getToken(JetTemplateParser.TEXT_PLAIN, 0); }
		public TextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_text; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JetTemplateParserVisitor ) return ((JetTemplateParserVisitor<? extends T>)visitor).visitText(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TextContext text() throws RecognitionException {
		TextContext _localctx = new TextContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_text);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TEXT_PLAIN) | (1L << TEXT_CDATA) | (1L << TEXT_ESCAPED_CHAR) | (1L << TEXT_SINGLE_CHAR) | (1L << TEXT_DIRECTIVE_LIKE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public TerminalNode VALUE_OPEN() { return getToken(JetTemplateParser.VALUE_OPEN, 0); }
		public TerminalNode VALUE_ESCAPED_OPEN() { return getToken(JetTemplateParser.VALUE_ESCAPED_OPEN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JetTemplateParserVisitor ) return ((JetTemplateParserVisitor<? extends T>)visitor).visitValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_value);
		try {
			setState(86);
			switch (_input.LA(1)) {
			case VALUE_OPEN:
				enterOuterAlt(_localctx, 1);
				{
				setState(78); match(VALUE_OPEN);
				setState(79); expression(0);
				setState(80); match(RIGHT_BRACE);
				}
				break;
			case VALUE_ESCAPED_OPEN:
				enterOuterAlt(_localctx, 2);
				{
				setState(82); match(VALUE_ESCAPED_OPEN);
				setState(83); expression(0);
				setState(84); match(RIGHT_BRACE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DirectiveContext extends ParserRuleContext {
		public Include_directiveContext include_directive() {
			return getRuleContext(Include_directiveContext.class,0);
		}
		public Stop_directiveContext stop_directive() {
			return getRuleContext(Stop_directiveContext.class,0);
		}
		public Continue_directiveContext continue_directive() {
			return getRuleContext(Continue_directiveContext.class,0);
		}
		public Invalid_directiveContext invalid_directive() {
			return getRuleContext(Invalid_directiveContext.class,0);
		}
		public Tag_directiveContext tag_directive() {
			return getRuleContext(Tag_directiveContext.class,0);
		}
		public Macro_directiveContext macro_directive() {
			return getRuleContext(Macro_directiveContext.class,0);
		}
		public Define_directiveContext define_directive() {
			return getRuleContext(Define_directiveContext.class,0);
		}
		public If_directiveContext if_directive() {
			return getRuleContext(If_directiveContext.class,0);
		}
		public Break_directiveContext break_directive() {
			return getRuleContext(Break_directiveContext.class,0);
		}
		public Set_directiveContext set_directive() {
			return getRuleContext(Set_directiveContext.class,0);
		}
		public For_directiveContext for_directive() {
			return getRuleContext(For_directiveContext.class,0);
		}
		public Put_directiveContext put_directive() {
			return getRuleContext(Put_directiveContext.class,0);
		}
		public DirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directive; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JetTemplateParserVisitor ) return ((JetTemplateParserVisitor<? extends T>)visitor).visitDirective(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DirectiveContext directive() throws RecognitionException {
		DirectiveContext _localctx = new DirectiveContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_directive);
		try {
			setState(100);
			switch (_input.LA(1)) {
			case DIRECTIVE_OPEN_DEFINE:
				enterOuterAlt(_localctx, 1);
				{
				setState(88); define_directive();
				}
				break;
			case DIRECTIVE_OPEN_SET:
				enterOuterAlt(_localctx, 2);
				{
				setState(89); set_directive();
				}
				break;
			case DIRECTIVE_OPEN_PUT:
				enterOuterAlt(_localctx, 3);
				{
				setState(90); put_directive();
				}
				break;
			case DIRECTIVE_OPEN_IF:
				enterOuterAlt(_localctx, 4);
				{
				setState(91); if_directive();
				}
				break;
			case DIRECTIVE_OPEN_FOR:
				enterOuterAlt(_localctx, 5);
				{
				setState(92); for_directive();
				}
				break;
			case DIRECTIVE_OPEN_BREAK:
			case DIRECTIVE_BREAK:
				enterOuterAlt(_localctx, 6);
				{
				setState(93); break_directive();
				}
				break;
			case DIRECTIVE_OPEN_CONTINUE:
			case DIRECTIVE_CONTINUE:
				enterOuterAlt(_localctx, 7);
				{
				setState(94); continue_directive();
				}
				break;
			case DIRECTIVE_OPEN_STOP:
			case DIRECTIVE_STOP:
				enterOuterAlt(_localctx, 8);
				{
				setState(95); stop_directive();
				}
				break;
			case DIRECTIVE_OPEN_INCLUDE:
				enterOuterAlt(_localctx, 9);
				{
				setState(96); include_directive();
				}
				break;
			case DIRECTIVE_OPEN_TAG:
				enterOuterAlt(_localctx, 10);
				{
				setState(97); tag_directive();
				}
				break;
			case DIRECTIVE_OPEN_MACRO:
				enterOuterAlt(_localctx, 11);
				{
				setState(98); macro_directive();
				}
				break;
			case DIRECTIVE_DEFINE:
			case DIRECTIVE_SET:
			case DIRECTIVE_PUT:
			case DIRECTIVE_IF:
			case DIRECTIVE_ELSEIF:
			case DIRECTIVE_FOR:
			case DIRECTIVE_INCLUDE:
			case DIRECTIVE_TAG:
			case DIRECTIVE_MACRO:
				enterOuterAlt(_localctx, 12);
				{
				setState(99); invalid_directive();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Define_directiveContext extends ParserRuleContext {
		public Define_expression_listContext define_expression_list() {
			return getRuleContext(Define_expression_listContext.class,0);
		}
		public TerminalNode DIRECTIVE_OPEN_DEFINE() { return getToken(JetTemplateParser.DIRECTIVE_OPEN_DEFINE, 0); }
		public Define_directiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_define_directive; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JetTemplateParserVisitor ) return ((JetTemplateParserVisitor<? extends T>)visitor).visitDefine_directive(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Define_directiveContext define_directive() throws RecognitionException {
		Define_directiveContext _localctx = new Define_directiveContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_define_directive);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102); match(DIRECTIVE_OPEN_DEFINE);
			setState(103); define_expression_list();
			setState(104); match(RIGHT_PARENTHESE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Define_expression_listContext extends ParserRuleContext {
		public Define_expressionContext define_expression(int i) {
			return getRuleContext(Define_expressionContext.class,i);
		}
		public List<Define_expressionContext> define_expression() {
			return getRuleContexts(Define_expressionContext.class);
		}
		public Define_expression_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_define_expression_list; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JetTemplateParserVisitor ) return ((JetTemplateParserVisitor<? extends T>)visitor).visitDefine_expression_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Define_expression_listContext define_expression_list() throws RecognitionException {
		Define_expression_listContext _localctx = new Define_expression_listContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_define_expression_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106); define_expression();
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(107); match(COMMA);
				setState(108); define_expression();
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Define_expressionContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(JetTemplateParser.IDENTIFIER, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Define_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_define_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JetTemplateParserVisitor ) return ((JetTemplateParserVisitor<? extends T>)visitor).visitDefine_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Define_expressionContext define_expression() throws RecognitionException {
		Define_expressionContext _localctx = new Define_expressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_define_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114); type();
			setState(115); match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Set_directiveContext extends ParserRuleContext {
		public Set_expressionContext set_expression(int i) {
			return getRuleContext(Set_expressionContext.class,i);
		}
		public TerminalNode DIRECTIVE_OPEN_SET() { return getToken(JetTemplateParser.DIRECTIVE_OPEN_SET, 0); }
		public List<Set_expressionContext> set_expression() {
			return getRuleContexts(Set_expressionContext.class);
		}
		public Set_directiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_set_directive; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JetTemplateParserVisitor ) return ((JetTemplateParserVisitor<? extends T>)visitor).visitSet_directive(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Set_directiveContext set_directive() throws RecognitionException {
		Set_directiveContext _localctx = new Set_directiveContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_set_directive);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117); match(DIRECTIVE_OPEN_SET);
			setState(118); set_expression();
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(119); match(COMMA);
				setState(120); set_expression();
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(126); match(RIGHT_PARENTHESE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Set_expressionContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(JetTemplateParser.IDENTIFIER, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
